Added initial texture support.

--- a/Fountain/Fountain.vcxproj.filters
+++ b/Fountain/Fountain.vcxproj.filters
@@ -7,14 +7,23 @@
     <Filter Include="src\Fountain">
       <UniqueIdentifier>{C039A1BF-AC9C-3064-5522-691A4164FCE6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Fountain\Core">
+      <UniqueIdentifier>{1876A465-848C-A2FB-CD03-2E1D39597383}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Fountain\Events">
       <UniqueIdentifier>{A46DBC65-10CF-9973-993C-E025059DD032}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Fountain\ImGui">
       <UniqueIdentifier>{EAFE9D1A-D6E2-5E70-3F43-59C32B4649F2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Fountain\Renderer">
+      <UniqueIdentifier>{667589BD-D2E1-44B8-9BD5-DC1507016720}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
@@ -40,6 +49,9 @@
     <Filter Include="vendor\glm\glm\gtx">
       <UniqueIdentifier>{B3A6A76B-9F8A-68C1-08EB-6214F4ED5243}</UniqueIdentifier>
     </Filter>
+    <Filter Include="vendor\stb_image">
+      <UniqueIdentifier>{0DA0BA59-F998-D9AB-22CB-BE300E23B9B7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Fountain.h">
@@ -50,6 +62,9 @@
     </ClInclude>
     <ClInclude Include="src\Fountain\Core.h">
       <Filter>src\Fountain</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Core\Timestep.h">
+      <Filter>src\Fountain\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Fountain\EntryPoint.h">
       <Filter>src\Fountain</Filter>
@@ -87,8 +102,53 @@
     <ClInclude Include="src\Fountain\MouseButtonCodes.h">
       <Filter>src\Fountain</Filter>
     </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\Buffer.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\GraphicsContext.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\OrthographicCamera.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\RenderCommand.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\Renderer.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\RendererAPI.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\Shader.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\Texture.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fountain\Renderer\VertexArray.h">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Fountain\Window.h">
       <Filter>src\Fountain</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1338,20 +1398,9 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\Fountain\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\Fountain\Renderer\Shader.h" />
-    <ClInclude Include="src\Fountain\Renderer\Buffer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\Fountain\Renderer\Renderer.h" />
-    <ClInclude Include="src\Fountain\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
-    <ClInclude Include="src\Fountain\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Fountain\Renderer\RenderCommand.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\Fountain\Renderer\OrthographicCamera.h" />
-    <ClInclude Include="src\Fountain\Core\Timestep.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="vendor\stb_image\stb_image.h">
+      <Filter>vendor\stb_image</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Fountain\Application.cpp">
@@ -1372,6 +1421,48 @@
     <ClCompile Include="src\Fountain\Log.cpp">
       <Filter>src\Fountain</Filter>
     </ClCompile>
+    <ClCompile Include="src\Fountain\Renderer\Buffer.cpp">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Fountain\Renderer\OrthographicCamera.cpp">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Fountain\Renderer\Renderer.cpp">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Fountain\Renderer\RendererAPI.cpp">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Fountain\Renderer\Shader.cpp">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Fountain\Renderer\Texture.cpp">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Fountain\Renderer\VertexArray.cpp">
+      <Filter>src\Fountain\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1381,17 +1472,8 @@
     <ClCompile Include="src\ftpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
-    <ClCompile Include="src\Fountain\Renderer\Shader.cpp" />
-    <ClCompile Include="src\Fountain\Renderer\Buffer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\Fountain\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\Fountain\Renderer\VertexArray.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
-    <ClCompile Include="src\Fountain\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
-    <ClCompile Include="src\Fountain\Renderer\OrthographicCamera.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="vendor\stb_image\stb_image.cpp">
+      <Filter>vendor\stb_image</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
