--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -38,7 +38,8 @@ Size=93,48
 Collapsed=0
 
 [Window][Settings]
-Pos=128,201
+ViewportPos=1390,503
+ViewportId=0x1C33C293
 Size=398,125
 Collapsed=0
 
