--- a/Fountain/Fountain.vcxproj
+++ b/Fountain/Fountain.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
@@ -19,27 +19,26 @@
     <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Fountain</RootNamespace>
-    <LatestTargetPlatformVersion>$([Microsoft.Build.Utilities.ToolLocationHelper]::GetLatestSDKTargetPlatformVersion('Windows', '10.0'))</LatestTargetPlatformVersion>
-    <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -134,32 +133,32 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Fountain.h" />
-    <ClInclude Include="src\Fountain\Application.h" />
-    <ClInclude Include="src\Fountain\Core.h" />
+    <ClInclude Include="src\Fountain\Core\Application.h" />
+    <ClInclude Include="src\Fountain\Core\Core.h" />
+    <ClInclude Include="src\Fountain\Core\EntryPoint.h" />
+    <ClInclude Include="src\Fountain\Core\Input.h" />
+    <ClInclude Include="src\Fountain\Core\KeyCodes.h" />
+    <ClInclude Include="src\Fountain\Core\Layer.h" />
+    <ClInclude Include="src\Fountain\Core\LayerStack.h" />
+    <ClInclude Include="src\Fountain\Core\Log.h" />
+    <ClInclude Include="src\Fountain\Core\MouseButtonCodes.h" />
     <ClInclude Include="src\Fountain\Core\Timestep.h" />
-    <ClInclude Include="src\Fountain\EntryPoint.h" />
+    <ClInclude Include="src\Fountain\Core\Window.h" />
     <ClInclude Include="src\Fountain\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Fountain\Events\Event.h" />
     <ClInclude Include="src\Fountain\Events\KeyEvent.h" />
     <ClInclude Include="src\Fountain\Events\MouseEvent.h" />
     <ClInclude Include="src\Fountain\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="src\Fountain\Input.h" />
-    <ClInclude Include="src\Fountain\KeyCodes.h" />
-    <ClInclude Include="src\Fountain\Layer.h" />
-    <ClInclude Include="src\Fountain\LayerStack.h" />
-    <ClInclude Include="src\Fountain\Log.h" />
-    <ClInclude Include="src\Fountain\MouseButtonCodes.h" />
-    <ClInclude Include="src\Fountain\OrthographicCameraController.h" />
     <ClInclude Include="src\Fountain\Renderer\Buffer.h" />
     <ClInclude Include="src\Fountain\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Fountain\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\Fountain\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\Fountain\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Fountain\Renderer\Renderer.h" />
     <ClInclude Include="src\Fountain\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Fountain\Renderer\Shader.h" />
     <ClInclude Include="src\Fountain\Renderer\Texture.h" />
     <ClInclude Include="src\Fountain\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Fountain\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
@@ -585,15 +584,15 @@
     <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Fountain\Application.cpp" />
+    <ClCompile Include="src\Fountain\Core\Application.cpp" />
+    <ClCompile Include="src\Fountain\Core\Layer.cpp" />
+    <ClCompile Include="src\Fountain\Core\LayerStack.cpp" />
+    <ClCompile Include="src\Fountain\Core\Log.cpp" />
     <ClCompile Include="src\Fountain\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Fountain\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\Fountain\Layer.cpp" />
-    <ClCompile Include="src\Fountain\LayerStack.cpp" />
-    <ClCompile Include="src\Fountain\Log.cpp" />
-    <ClCompile Include="src\Fountain\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Fountain\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Fountain\Renderer\RendererAPI.cpp" />
