--- a/Fountain/Fountain.vcxproj
+++ b/Fountain/Fountain.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="src\Fountain\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\Fountain\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Fountain\Renderer\Renderer.h" />
+    <ClInclude Include="src\Fountain\Renderer\Renderer2D.h" />
     <ClInclude Include="src\Fountain\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Fountain\Renderer\Shader.h" />
     <ClInclude Include="src\Fountain\Renderer\Texture.h" />
@@ -595,6 +596,7 @@
     <ClCompile Include="src\Fountain\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\Renderer2D.cpp" />
     <ClCompile Include="src\Fountain\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Shader.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Texture.cpp" />
