--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -38,9 +38,8 @@ Size=93,48
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1390,503
-ViewportId=0x1C33C293
-Size=400,124
+Pos=1199,272
+Size=334,183
 Collapsed=0
 
 [Docking][Data]
