--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -38,7 +38,8 @@ Size=93,48
 Collapsed=0
 
 [Window][Settings]
-Pos=1199,272
+ViewportPos=1363,459
+ViewportId=0x1C33C293
 Size=334,183
 Collapsed=0
 
