--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -38,8 +38,7 @@ Size=93,48
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1242,338
-ViewportId=0x1C33C293
+Pos=1242,315
 Size=334,183
 Collapsed=0
 
