.gitmodules and .gitignore changed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-# Directories
-.vs/
-bin/
+# Binaries
+**/bin/
+!vendor/bin
 bin-int/
 
-# Files
-*.user
+# Fountain files
+*.log
 *.json
+
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
