--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -27,8 +27,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][DockSpace Demo]
-ViewportPos=568,128
-ViewportId=0x4647B76E
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -38,14 +37,17 @@ Size=93,48
 Collapsed=0
 
 [Window][Settings]
-Pos=889,103
-Size=334,183
+Pos=0,19
+Size=418,701
 Collapsed=0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=568,166 Size=1280,682 Split=X
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=252,701 Selected=0x46B5E99C
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1026,701 Split=Y
-    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=647,463 CentralNode=1
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=647,236 Selected=0xBF126D42
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=190,232 Size=1280,701 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=418,701 HiddenTabBar=1 Selected=0x1C33C293
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=860,701 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=252,701 Selected=0x46B5E99C
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1026,701 Split=Y
+      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=647,463 CentralNode=1
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=647,236 Selected=0xBF126D42
 
