--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -27,8 +27,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][DockSpace Demo]
-Pos=0,0
-Size=1280,720
+Size=1920,1017
 Collapsed=0
 
 [Window][Test]
@@ -37,13 +36,13 @@ Size=93,48
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
-Size=1280,701
+ViewportPos=1446,600
+ViewportId=0x1C33C293
+Size=696,627
 Collapsed=0
-DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=138,180 Size=1280,701 Split=X
+DockSpace     ID=0x3BC79352 Pos=0,42 Size=1920,998 Split=X
   DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=252,701 Selected=0x46B5E99C
   DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1026,701 Split=Y
     DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=647,463 CentralNode=1 Selected=0x1C33C293
