--- a/Fountainhead/imgui.ini
+++ b/Fountainhead/imgui.ini
@@ -9,19 +9,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
-Size=393,701
+Pos=61,100
+Size=519,141
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Viewport]
-Pos=395,19
-Size=885,701
+Pos=0,19
+Size=1280,701
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x3BC79352,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=201,249 Size=1280,701 Split=X
-  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=393,701 Selected=0x1C33C293
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=885,701 CentralNode=1 Selected=0x995B0CF8
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=1328,494 Size=1280,701 CentralNode=1 Selected=0x995B0CF8
 
