--- a/Fountainhead/imgui.ini
+++ b/Fountainhead/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1955,1068
 Collapsed=0
 
 [Window][Debug##Default]
@@ -14,11 +14,12 @@ Size=519,141
 Collapsed=0
 
 [Window][Viewport]
-Pos=0,19
-Size=1280,701
+Pos=304,51
+Size=1411,609
 Collapsed=0
-DockId=0x3BC79352,0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=1328,494 Size=1280,701 CentralNode=1 Selected=0x995B0CF8
+DockNode  ID=0x00000001 Pos=377,153 Size=1411,609
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=73,121 Size=1955,1049 CentralNode=1 Selected=0x995B0CF8
 
