--- a/Fountainhead/imgui.ini
+++ b/Fountainhead/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=3840,2050
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,19 +9,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
-Size=598,701
+Pos=2942,19
+Size=898,2031
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=600,19
-Size=680,701
+Pos=833,19
+Size=2107,2031
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=831,2031
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=56,115 Size=1280,701 Split=X Selected=0x995B0CF8
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=598,701 Selected=0x1C33C293
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=1273,701 CentralNode=1 Selected=0x995B0CF8
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,59 Size=3840,2031 Split=X Selected=0x995B0CF8
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=979,701 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=831,701 Selected=0x9A68760C
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=2107,701 CentralNode=1 Selected=0x995B0CF8
+  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=299,701 Selected=0x1C33C293
 
