--- a/Fountainhead/imgui.ini
+++ b/Fountainhead/imgui.ini
@@ -22,14 +22,22 @@ DockId=0x00000002,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=831,2031
+Size=831,994
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
+
+[Window][Properties]
+Pos=0,1015
+Size=831,1035
+Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,59 Size=3840,2031 Split=X Selected=0x995B0CF8
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=979,701 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=831,701 Selected=0x9A68760C
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=2107,701 CentralNode=1 Selected=0x995B0CF8
-  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=299,701 Selected=0x1C33C293
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,59 Size=3840,2031 Split=X Selected=0x995B0CF8
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=979,701 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=831,701 Split=Y Selected=0x9A68760C
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=831,994 Selected=0x9A68760C
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=831,1035 Selected=0xC89E3217
+    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=2107,701 CentralNode=1 Selected=0x995B0CF8
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=299,701 Selected=0x1C33C293
 
