New shader system, added Python scripts for retrieving dependencies, added uniform buffers, added command line args, and better premake scripts

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ bin-int/
 **.vcxproj.filters
 **.vcxproj.user
 Fountain/vendor/yaml-cpp
+
+# Directories
+Fountain/vendor/VulkanSDK
+Fountainhead/assets/cache
+scripts/__pycache__
