--- a/Fountainhead/imgui.ini
+++ b/Fountainhead/imgui.ini
@@ -15,10 +15,10 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=847,34
-Size=2253,1464
+Pos=847,93
+Size=2253,1405
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000D,0
 
 [Window][Scene Hierarchy]
 Pos=0,34
@@ -44,16 +44,24 @@ Size=2253,550
 Collapsed=0
 DockId=0x0000000B,0
 
+[Window][##toolbar]
+Pos=847,34
+Size=2253,57
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,74 Size=3840,2016 Split=X Selected=0x995B0CF8
-  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=3100,701 Split=X
-    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=979,701 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=845,701 Split=Y Selected=0x9A68760C
-        DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=831,762 Selected=0x9A68760C
-        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=831,660 Selected=0xC89E3217
-      DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=2253,701 Split=Y Selected=0x995B0CF8
-        DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=2569,1464 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-        DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=2569,550 Selected=0x371352B7
-    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=299,701 Selected=0x1C33C293
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=738,701 Selected=0x968648AE
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,74 Size=3840,2016 Split=X Selected=0x995B0CF8
+  DockNode          ID=0x00000007 Parent=0x3BC79352 SizeRef=3100,701 Split=X
+    DockNode        ID=0x00000004 Parent=0x00000007 SizeRef=979,701 Split=X
+      DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=845,701 Split=Y Selected=0x9A68760C
+        DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=831,762 Selected=0x9A68760C
+        DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=831,660 Selected=0xC89E3217
+      DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=2253,701 Split=Y Selected=0x995B0CF8
+        DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=2569,1464 Split=Y Selected=0x995B0CF8
+          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=919,57 HiddenTabBar=1 Selected=0x28257B55
+          DockNode  ID=0x0000000D Parent=0x00000009 SizeRef=919,569 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+        DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=2569,550 Selected=0x371352B7
+    DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=299,701 Selected=0x1C33C293
+  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=738,701 Selected=0x968648AE
 
